--- a/simplify.yaml
+++ b/simplify.yaml
@@ -1,5 +1,6 @@
 type_map:
   - Na
+pick_data: /home/sekinelabo/Documents/DP-GEN_Sodium/dpgen/simplify
 init_data_prefix: ''
 init_data_sys:
   - /home/sekinelabo/Documents/DP-GEN_Sodium/dpgen/data/Na7/
@@ -97,3 +98,5 @@ fp_params:
   keywords: P B3LYP/6-311+g(d) force
   nproc: 14
   charge: 0
+init_pick_number: 100,
+iter_pick_number: 100,
