--- a/simplify.yaml
+++ b/simplify.yaml
@@ -6,9 +6,12 @@ init_data_sys:
   - /home/sekinelabo/Documents/DP-GEN_Sodium/data/Na7/
 sys_format: deepmd/raw
 sys_configs:
-  - - /home/sekinelabo/Documents/DP-GEN_Sodium/iter.00000*/02.fp/data.000/
+  - - /home/sekinelabo/Documents/DP-GEN_Sodium/iter.00000*/02.fp/
 sys_batch_size:
-  - 1
+  - auto
+training_iter0_model_path: 
+  - /home/sekinelabo/Documents/DP-GEN_Sodium/iter.000000/00.train/00[0-3]
+training_init_model: true
 numb_models: 4
 default_training_param:
   model:
